file doesnt wnat work

--- a/package.nuspec
+++ b/package.nuspec
@@ -10,7 +10,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Kontur.Billing Resharping</description>
     <summary>Kontur.Billing Resharping</summary>
-    <iconUrl>file://images/icon.png</iconUrl>
+    <iconUrl>https://pp.vk.me/c626527/v626527980/4e720/D4PSe7IhzN8.jpg</iconUrl>
     <projectUrl>https://bitbucket.org/tolltech/tollrech</projectUrl>
     <tags>skbkontur,konturbilling,konturresharping</tags>
     <dependencies>
