first working test!

--- a/Tollrech.Tests/Tollrech.Tests.csproj
+++ b/Tollrech.Tests/Tollrech.Tests.csproj
@@ -8,6 +8,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Packages\**" />
+    <None Remove="**\*.tmp" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Test\Data\**\*.cs" />
