--- a/package.nuspec
+++ b/package.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Tolltech.Tollrech</id>
     <title>Tollrech</title>
-    <version>2017.1.3</version>
+    <version>2017.3.0</version>
     <authors>Tolltech</authors>
     <copyright>Tolltech</copyright>
     <owners>Tolltech</owners>
@@ -18,7 +18,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\Tollrech.dll" target="dotFiles\" />
-    <file src="bin\Release\Tollrech.pdb" target="dotFiles\" />
+    <file src="Tollrech\bin\Release\net46\Tollrech.dll" target="lib\net46\" />
+    <file src="Tollrech\bin\Release\net46\Tollrech.pdb" target="lib\net46\" />
   </files>
 </package>
