--- a/Tollrech/Tollrech.csproj
+++ b/Tollrech/Tollrech.csproj
@@ -4,10 +4,6 @@
     <IsPackable>true</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="JetBrains.ReSharper.SDK" Version="2017.3.0" PrivateAssets="All" />
-    <PackageReference Include="Wave" Version="[11.0]" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Remove="Tollrech.Tests\**" />
   </ItemGroup>
   <ItemGroup>
@@ -15,5 +11,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Tollrech.Tests\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="jetbrains.resharper.sdk" Version="2018.1.3" />
   </ItemGroup>
 </Project>
