--- a/Tollrech.Tests/Tollrech.Tests.csproj
+++ b/Tollrech.Tests/Tollrech.Tests.csproj
@@ -24,7 +24,10 @@
     <None Remove="Test\Data\MockedClassCreateFixTests\BigTest.cs.gold" />
     <None Remove="Test\Data\MockedClassCreateFixTests\MockArray.cs.gold" />
     <None Remove="Test\Data\MockedClassCreateFixTests\Simple.cs.gold" />
+    <None Remove="Test\Data\SqlMapGeneratorTests\EmptyEntity.cs.gold" />
     <None Remove="Test\Data\SqlMapGeneratorTests\SqlEntity.cs.gold" />
+    <None Remove="Test\Data\SqlMapGeneratorTests\SqlEntityHalf.cs.gold" />
+    <None Remove="Test\Data\SqlScriptGeneratorTests\EmptySqlEntity.cs.gold" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Test\Data\MockedClassCreateFixTests\BigTest.cs.gold">
@@ -36,7 +39,16 @@
     <Content Include="Test\Data\MockedClassCreateFixTests\Simple.cs.gold">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Test\Data\SqlMapGeneratorTests\EmptyEntity.cs.gold">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Test\Data\SqlMapGeneratorTests\SqlEntityHalf.cs.gold">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Test\Data\SqlMapGeneratorTests\SqlEntity.cs.gold">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Test\Data\SqlScriptGeneratorTests\EmptySqlEntity.cs.gold">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Test\Data\SqlScriptGeneratorTests\SqlEntity2.cs.gold">
@@ -72,7 +84,16 @@
     <Content Update="Test\Data\MockedClassCreateFixTests\Simple.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Update="Test\Data\SqlMapGeneratorTests\EmptyEntity.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="Test\Data\SqlMapGeneratorTests\SqlEntityHalf.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="Test\Data\SqlMapGeneratorTests\SqlEntity.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="Test\Data\SqlScriptGeneratorTests\EmptySqlEntity.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="Test\Data\SqlScriptGeneratorTests\SqlEntity3Property.cs">
