dummy for dummy

--- a/Tollrech.Tests/Tollrech.Tests.csproj
+++ b/Tollrech.Tests/Tollrech.Tests.csproj
@@ -21,6 +21,7 @@
     <Content Include="Test\Data\**\*.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Test\Data\CtorPropertyInitializerContextActionTests\SimpleCtor.cs.gold" />
     <None Remove="Test\Data\MockedClassCreateFixTests\BigTest.cs.gold" />
     <None Remove="Test\Data\MockedClassCreateFixTests\MockArray.cs.gold" />
     <None Remove="Test\Data\MockedClassCreateFixTests\Simple.cs.gold" />
@@ -31,6 +32,9 @@
     <None Remove="Test\Data\SqlScriptGeneratorTests\SqlEntity2Long.cs.gold" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Test\Data\CtorPropertyInitializerContextActionTests\SimpleCtor.cs.gold">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Test\Data\MockedClassCreateFixTests\BigTest.cs.gold">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -79,6 +83,9 @@
     <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2018.2.0" />
   </ItemGroup>
   <ItemGroup>
+    <Content Update="Test\Data\CtorPropertyInitializerContextActionTests\SimpleCtor.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="Test\Data\MockedClassCreateFixTests\BigTest.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
