--- a/Tolltech.Tollrech.Rider/META-INF/plugin.xml
+++ b/Tolltech.Tollrech.Rider/META-INF/plugin.xml
@@ -2,9 +2,9 @@
   <id>Tolltech.Tollrech</id>
   <name>Tollrech</name>
   <description>Kontur.Billing Resharping</description>
-  <version>2018.1.3.4</version>
+  <version>2018.2.1.0</version>
   <vendor url="https://bitbucket.org/tolltech/tollrech">tolltech</vendor>
-  <idea-version since-build="172.4144" until-build="172-4144.*"/>
+  <idea-version since-build="182" until-build="182-*"/>
   <extensions defaultExtensionNs="com.intellij" />
   <depends>com.intellij.modules.rider</depends>
 </idea-plugin>
