create initializers with dummy values

--- a/Tollrech.Tests/Tollrech.Tests.csproj
+++ b/Tollrech.Tests/Tollrech.Tests.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Test\Data\CtorPropertyInitializerContextActionTests\SimpleCtor.cs.gold" />
+    <None Remove="Test\Data\CtorPropertyInitializerContextActionTests\SimpleCtorWithoutInitializer.cs.gold" />
     <None Remove="Test\Data\MockedClassCreateFixTests\BigTest.cs.gold" />
     <None Remove="Test\Data\MockedClassCreateFixTests\MockArray.cs.gold" />
     <None Remove="Test\Data\MockedClassCreateFixTests\Simple.cs.gold" />
@@ -33,6 +34,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Test\Data\CtorPropertyInitializerContextActionTests\SimpleCtor.cs.gold">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Test\Data\CtorPropertyInitializerContextActionTests\SimpleCtorWithoutInitializer.cs.gold">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Test\Data\MockedClassCreateFixTests\BigTest.cs.gold">
@@ -83,6 +87,9 @@
     <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="2018.2.0" />
   </ItemGroup>
   <ItemGroup>
+    <Content Update="Test\Data\CtorPropertyInitializerContextActionTests\SimpleCtorWithoutInitializer.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="Test\Data\CtorPropertyInitializerContextActionTests\SimpleCtor.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
