--- a/Tollrech/Tollrech.csproj
+++ b/Tollrech/Tollrech.csproj
@@ -13,7 +13,12 @@
     <None Remove="Tollrech.Tests\**" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="jetbrains.rider.sdk" Version="2018.3.1" />    
+    <PackageReference Include="JetBrains.Annotations" Version="2019.1.1" />
+    <PackageReference Include="jetbrains.rider.sdk" Version="2018.3.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="System.ValueTuple" Version="4.4.0" />    
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.ComponentModel.DataAnnotations" />
