--- a/Tollrech/Tollrech.csproj
+++ b/Tollrech/Tollrech.csproj
@@ -13,11 +13,14 @@
     <None Remove="Tollrech.Tests\**" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\Tolltech.Tollrech.Rider\META-INF\plugin.xml" Link="plugin.xml" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="..\package.nuspec" Link="package.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.1" />
-    <PackageReference Include="jetbrains.rider.sdk" Version="2018.3.4">
+    <PackageReference Include="jetbrains.rider.sdk" Version="2019.1.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
