--- a/Tollrech.Tests/Tollrech.Tests.csproj
+++ b/Tollrech.Tests/Tollrech.Tests.csproj
@@ -37,6 +37,7 @@
     <None Remove="Test\Data\SqlMapGeneratorTests\EmptyEntity.cs.gold" />
     <None Remove="Test\Data\SqlMapGeneratorTests\SqlEntity.cs.gold" />
     <None Remove="Test\Data\SqlMapGeneratorTests\SqlEntityHalf.cs.gold" />
+    <None Remove="Test\Data\SqlRepositoryGeneratorTests\EmptyEntity.cs.gold" />
     <None Remove="Test\Data\SqlScriptGeneratorTests\EmptySqlEntity.cs.gold" />
     <None Remove="Test\Data\SqlScriptGeneratorTests\SqlEntity2Long.cs.gold" />
     <None Remove="Test\Data\SqlScriptIndexByMethodGeneratorTests\Await.cs.gold" />
@@ -92,6 +93,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Test\Data\SqlMapGeneratorTests\SqlEntity.cs.gold">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Test\Data\SqlRepositoryGeneratorTests\EmptyEntity.cs.gold">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Test\Data\SqlScriptGeneratorTests\EmptySqlEntity.cs.gold">
@@ -190,6 +194,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="Test\Data\SqlMapGeneratorTests\SqlEntity.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="Test\Data\SqlRepositoryGeneratorTests\EmptyEntity.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="Test\Data\SqlScriptGeneratorTests\EmptySqlEntity.cs">
