--- a/package.nuspec
+++ b/package.nuspec
@@ -3,13 +3,13 @@
   <metadata>
     <id>Tolltech.Tollrech</id>
     <title>Tollrech</title>
-    <version>2019.3.2</version>
+    <version>2019.3.4</version>
     <authors>Tolltech</authors>
     <copyright>Tolltech</copyright>
     <owners>Tolltech</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Kontur.Billing Resharping</description>
-    <summary>Kontur.Billing Resharping</summary>
+    <description>Kontur.Billing Resharper</description>
+    <summary>Kontur.Billing Resharper</summary>
     <iconUrl>https://pp.userapi.com/c837734/v837734541/58885/1BTnIETQxB8.jpg</iconUrl>
     <projectUrl>https://bitbucket.org/tolltech/tollrech</projectUrl>
     <licenseUrl>https://bitbucket.org/tolltech/tollrech/src/master/eula/text-eula.txt</licenseUrl>
