--- a/Tollrech.Tests/Tollrech.Tests.csproj
+++ b/Tollrech.Tests/Tollrech.Tests.csproj
@@ -156,7 +156,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="JetBrains.Rider.SDK.Tests" Version="2019.3.1" />
+    <PackageReference Include="JetBrains.Rider.SDK.Tests" Version="2020.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="NUnit" Version="3.10.1" />
   </ItemGroup>
