--- a/Tollrech/Tollrech.csproj
+++ b/Tollrech/Tollrech.csproj
@@ -19,7 +19,12 @@
     <None Include="..\package.nuspec" Link="package.nuspec" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="jetbrains.rider.sdk" Version="2019.3.1" />
+    <PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
+    <PackageReference Include="JetBrains.Lifetimes" Version="2020.1.3" />
+    <PackageReference Include="jetbrains.rider.sdk" Version="2020.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
