--- a/Tollrech/Tollrech.csproj
+++ b/Tollrech/Tollrech.csproj
@@ -13,7 +13,7 @@
     <None Remove="Tollrech.Tests\**" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\Tolltech.Tollrech.Rider\META-INF\plugin.xml" Link="plugin.xml" />
+    <Content Include="..\Tolltech.Tollrider.Rider\META-INF\plugin.xml" Link="plugin.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\package.nuspec" Link="package.nuspec" />
