--- a/package.nuspec
+++ b/package.nuspec
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0"?>
 <package>
   <metadata>
-    <id>Tolltech.Tollrech</id>
-    <title>Tollrech</title>
-    <version>2020.1.2</version>
+    <id>Tolltech.Tollrider</id>
+    <title>Tollrider</title>
+    <version>2020.1.1</version>
     <authors>Tolltech</authors>
     <copyright>Tolltech</copyright>
     <owners>Tolltech</owners>
