--- a/package.nuspec
+++ b/package.nuspec
@@ -3,12 +3,12 @@
   <metadata>
     <id>Tolltech.Tollrider</id>
     <title>Tollrider</title>
-    <version>2020.1.1</version>
+    <version>2020.1.2</version>
     <authors>Tolltech</authors>
     <copyright>Tolltech</copyright>
     <owners>Tolltech</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Kontur.Billing Resharper</description>
+    <description>Generate logging, sql mapping, sql scripts, mocked classes, mother objects in testing</description>
     <summary>Kontur.Billing Resharper</summary>
     <iconUrl>https://pp.userapi.com/c837734/v837734541/58885/1BTnIETQxB8.jpg</iconUrl>
     <projectUrl>https://bitbucket.org/tolltech/tollrech</projectUrl>
