--- a/Tollrech.Tests/Tollrech.Tests.csproj
+++ b/Tollrech.Tests/Tollrech.Tests.csproj
@@ -24,6 +24,9 @@
     <None Remove="Test\Data\CtorPropertyInitializerContextActionTests\CtorWithoutTestBase.cs.gold" />
     <None Remove="Test\Data\CtorPropertyInitializerContextActionTests\SimpleCtor.cs.gold" />
     <None Remove="Test\Data\CtorPropertyInitializerContextActionTests\SimpleCtorWithoutInitializer.cs.gold" />
+    <None Remove="Test\Data\JsonPropertyGeneratorTests\EmptyEntity.cs.gold" />
+    <None Remove="Test\Data\JsonPropertyGeneratorTests\JsonEntity.cs.gold" />
+    <None Remove="Test\Data\JsonPropertyGeneratorTests\JsonEntityHalf.cs.gold" />
     <None Remove="Test\Data\LogIntroducerTests\LogFieldExists.cs.gold" />
     <None Remove="Test\Data\LogIntroducerTests\LogFieldExistsOther.cs.gold" />
     <None Remove="Test\Data\LogIntroducerTests\NotLiteral.cs.gold" />
@@ -58,6 +61,15 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Test\Data\CtorPropertyInitializerContextActionTests\SimpleCtorWithoutInitializer.cs.gold">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Test\Data\JsonPropertyGeneratorTests\EmptyEntity.cs.gold">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Test\Data\JsonPropertyGeneratorTests\JsonEntity.cs.gold">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Test\Data\JsonPropertyGeneratorTests\JsonEntityHalf.cs.gold">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Test\Data\LogIntroducerTests\LogFieldExistsOther.cs.gold">
@@ -173,6 +185,15 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="Test\Data\CtorPropertyInitializerContextActionTests\SimpleCtor.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="Test\Data\JsonPropertyGeneratorTests\EmptyEntity.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="Test\Data\JsonPropertyGeneratorTests\JsonEntity.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="Test\Data\JsonPropertyGeneratorTests\JsonEntityHalf.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="Test\Data\LogIntroducerTests\LogFieldExistsOther.cs">
