--- a/Tolltech.Tollrider.Rider/META-INF/plugin.xml
+++ b/Tolltech.Tollrider.Rider/META-INF/plugin.xml
@@ -2,8 +2,8 @@
   <id>Tolltech.Tollrider</id>
   <name>Tollrider</name>
   <description>Generate logging, sql mapping, sql scripts, mocked classes, mother objects in testing</description>
-  <version>2020.2.1</version>
-  <vendor url="https://bitbucket.org/tolltech/tollrech">tolltech</vendor>
+  <version>2020.2.5</version>
+  <vendor url="https://github.com/tolltech/tollrech">tolltech</vendor>
   <idea-version since-build="202" until-build="202.*"/>
   <extensions defaultExtensionNs="com.intellij" />
   <depends>com.intellij.modules.rider</depends>
