--- a/Tolltech.Tollrider.Rider/META-INF/plugin.xml
+++ b/Tolltech.Tollrider.Rider/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>Tolltech.Tollrider</id>
   <name>Tollrider</name>
-  <description>Generate logging, sql mapping, sql scripts, mocked classes, mother objects in testing</description>
+  <description>Generate JSON, EF SQL schemas description attributes for data contract objects. Introduce ILog for strings. Generate ctor calling with dummy values for class properties.</description>
   <version>2021.1.0</version>
   <vendor url="https://github.com/tolltech/tollrech">tolltech</vendor>
   <idea-version since-build="211" until-build="211.*"/>
