--- a/package.nuspec
+++ b/package.nuspec
@@ -8,7 +8,7 @@
     <copyright>Tolltech</copyright>
     <owners>Tolltech</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Kontur.Billing Resharper</description>
+    <description>Generate JSON, EF SQL schemas description attributes for data contract objects. Introduce ILog for strings. Generate ctor calling with dummy values for class properties.</description>
     <summary>Kontur.Billing Resharper</summary>
     <iconUrl>https://pp.userapi.com/c837734/v837734541/58885/1BTnIETQxB8.jpg</iconUrl>
     <projectUrl>https://github.com/tolltech/tollrech</projectUrl>
