add availabilty of repo via table attribute

--- a/Tollrech.Tests/Tollrech.Tests.csproj
+++ b/Tollrech.Tests/Tollrech.Tests.csproj
@@ -50,6 +50,7 @@
     <None Remove="Test\Data\SqlMapGeneratorTests\SqlEntityHalf.cs.gold" />
     <None Remove="Test\Data\SqlRepositoryGeneratorTests\DoubleTimestampEntity.cs.gold" />
     <None Remove="Test\Data\SqlRepositoryGeneratorTests\EmptyEntity.cs.gold" />
+    <None Remove="Test\Data\SqlRepositoryGeneratorTests\EmptyEntityWithTable.cs.gold" />
     <None Remove="Test\Data\SqlRepositoryGeneratorTests\IdBinaryEntity.cs.gold" />
     <None Remove="Test\Data\SqlRepositoryGeneratorTests\IdEntity.cs.gold" />
     <None Remove="Test\Data\SqlRepositoryGeneratorTests\IdTimestampEntity.cs.gold" />
@@ -141,6 +142,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Test\Data\SqlMapGeneratorTests\SqlEntity.cs.gold">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Test\Data\SqlRepositoryGeneratorTests\EmptyEntityWithTable.cs.gold">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Test\Data\SqlRepositoryGeneratorTests\EmptyEntity.cs.gold">
@@ -292,6 +296,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="Test\Data\SqlRepositoryGeneratorTests\DoubleTimestampEntity.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="Test\Data\SqlRepositoryGeneratorTests\EmptyEntityWithTable.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="Test\Data\SqlRepositoryGeneratorTests\IdBinaryEntity.cs">
