--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,8 +1,8 @@
-<idea-plugin>
+<idea-plugin require-restart="true">
   <id>Tolltech.Tollrider</id>
   <name>Tollrider</name>
   <description>Generate JSON, EF SQL schemas description attributes for data contract objects. Introduce ILog for strings. Generate ctor calling with dummy values for class properties.</description>
-  <version>2021.2.1</version>
+  <version>2021.2.2</version>
   <vendor url="https://github.com/tolltech/tollrech">tolltech</vendor>
   <idea-version since-build="212" until-build="212.*"/>
   <extensions defaultExtensionNs="com.intellij" />
